# armv8a_architecture_optimization_deep_learning

./: build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/armv8a_architecture_optimization_deep_learning/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: lenet5_radl.onnx
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/header/: AssetManagement.h  BaseLayer.h  Convolution.h  CustomAccessors.h  Flatten.h  FullyConnected.h  Helpers.h  LRN.h  Layer.h  LayerThread.h  Network.h  Pooling.h  Profiler.h  Softmax.h  Testing.h
app/src/main/cpp/source/: AssetManagement.cpp  Convolution.cpp  Flatten.cpp  FullyConnected.cpp  Helpers.cpp  LRN.cpp  LayerThread.cpp  Network.cpp  Pooling.cpp  Profiler.cpp  Softmax.cpp  Testing.cpp
app/src/main/java/com/example/armv8a_architecture_optimization_deep_learning/: MainActivity.java
app/src/main/python/: hello_world.py
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/armv8a_architecture_optimization_deep_learning/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
